--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "@vitejs/plugin-react": "^4.7.0",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "4.1.12",
     "vite": "6.3.5"
   },
